--- a/curr_inven.ui
+++ b/curr_inven.ui
@@ -27,6 +27,20 @@
       <height>321</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI Variable Small Light</family>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QListView {
+    background-color: qlineargradient(spread:pad, x1:0.537, y1:0.971591, x2:0.542, y2:0, stop:0 rgba(114, 185, 217, 239), stop:0.178947 rgba(180, 210, 223, 243), stop:1 rgba(255, 255, 255, 255));
+    border: 2px solid rgb(78, 114, 130);
+    border-radius: 10px;
+}
+</string>
+    </property>
    </widget>
    <widget class="QListView" name="qty_list">
     <property name="geometry">
@@ -36,6 +50,20 @@
       <width>141</width>
       <height>321</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI Variable Small Light</family>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QListView {
+    background-color: qlineargradient(spread:pad, x1:0.537, y1:0.971591, x2:0.542, y2:0, stop:0 rgba(114, 185, 217, 239), stop:0.178947 rgba(180, 210, 223, 243), stop:1 rgba(255, 255, 255, 255));
+    border: 2px solid rgb(78, 114, 130);
+    border-radius: 10px;
+}
+</string>
     </property>
    </widget>
    <widget class="QListView" name="item_list">
@@ -47,6 +75,20 @@
       <height>321</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI Variable Small Light</family>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QListView {
+    background-color: qlineargradient(spread:pad, x1:0.537, y1:0.971591, x2:0.542, y2:0, stop:0 rgba(114, 185, 217, 239), stop:0.178947 rgba(180, 210, 223, 243), stop:1 rgba(255, 255, 255, 255));
+    border: 2px solid rgb(78, 114, 130);
+    border-radius: 10px;
+}
+</string>
+    </property>
    </widget>
    <widget class="QListView" name="m_qty_list">
     <property name="geometry">
@@ -56,6 +98,20 @@
       <width>111</width>
       <height>321</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI Variable Small Light</family>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QListView {
+    background-color: qlineargradient(spread:pad, x1:0.537, y1:0.971591, x2:0.542, y2:0, stop:0 rgba(114, 185, 217, 239), stop:0.178947 rgba(180, 210, 223, 243), stop:1 rgba(255, 255, 255, 255));
+    border: 2px solid rgb(78, 114, 130);
+    border-radius: 10px;
+}
+</string>
     </property>
    </widget>
    <widget class="QLabel" name="price_label">
@@ -72,6 +128,12 @@
       <family>Segoe UI Variable Small Semilig</family>
       <pointsize>16</pointsize>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel {
+    color:rgb(78, 114, 130);
+}
+</string>
     </property>
     <property name="text">
      <string>Price : </string>
@@ -91,6 +153,12 @@
       <family>Segoe UI Variable Small Semilig</family>
       <pointsize>16</pointsize>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel {
+    color:rgb(78, 114, 130);
+}
+</string>
     </property>
     <property name="text">
      <string>Item : </string>
@@ -114,6 +182,12 @@
       <pointsize>16</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel {
+    color:rgb(78, 114, 130);
+}
+</string>
+    </property>
     <property name="text">
      <string>Qty :</string>
     </property>
@@ -135,6 +209,12 @@
       <family>Segoe UI Variable Small Semilig</family>
       <pointsize>16</pointsize>
      </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel {
+    color:rgb(78, 114, 130);
+}
+</string>
     </property>
     <property name="text">
      <string>Min. Qty. :</string>
