--- a/bill_win.ui
+++ b/bill_win.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1007</width>
-    <height>830</height>
+    <height>847</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -62,7 +62,7 @@
    <widget class="QLabel" name="qty_label">
     <property name="geometry">
      <rect>
-      <x>440</x>
+      <x>480</x>
       <y>270</y>
       <width>101</width>
       <height>31</height>
@@ -128,17 +128,7 @@
    <widget class="QListView" name="qty_list">
     <property name="geometry">
      <rect>
-      <x>450</x>
-      <y>310</y>
-      <width>81</width>
-      <height>321</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QListView" name="m_qty_list">
-    <property name="geometry">
-     <rect>
-      <x>560</x>
+      <x>490</x>
       <y>310</y>
       <width>81</width>
       <height>321</height>
@@ -153,57 +143,6 @@
       <width>361</width>
       <height>321</height>
      </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="m_qty_label">
-    <property name="geometry">
-     <rect>
-      <x>560</x>
-      <y>270</y>
-      <width>111</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Segoe UI Variable Small Semilig</family>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Discount</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="subtotal_linedit">
-    <property name="geometry">
-     <rect>
-      <x>780</x>
-      <y>660</y>
-      <width>151</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Segoe UI Variable Small Light</family>
-      <pointsize>16</pointsize>
-     </font>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="gtotal_lineedit">
-    <property name="geometry">
-     <rect>
-      <x>780</x>
-      <y>710</y>
-      <width>151</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Segoe UI Variable Small Light</family>
-      <pointsize>16</pointsize>
-     </font>
     </property>
    </widget>
    <widget class="QLabel" name="subtotal_label">
@@ -230,7 +169,7 @@
     <property name="geometry">
      <rect>
       <x>660</x>
-      <y>710</y>
+      <y>740</y>
       <width>141</width>
       <height>21</height>
      </rect>
@@ -249,7 +188,7 @@
    <widget class="QListView" name="price_list">
     <property name="geometry">
      <rect>
-      <x>680</x>
+      <x>650</x>
       <y>310</y>
       <width>91</width>
       <height>321</height>
@@ -259,7 +198,7 @@
    <widget class="QLabel" name="price_label">
     <property name="geometry">
      <rect>
-      <x>670</x>
+      <x>640</x>
       <y>270</y>
       <width>101</width>
       <height>31</height>
@@ -281,8 +220,8 @@
    <widget class="QPushButton" name="cancel_pb">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>700</y>
+      <x>10</x>
+      <y>730</y>
       <width>111</width>
       <height>41</height>
      </rect>
@@ -341,8 +280,8 @@ QPushButton:pressed {
    <widget class="QPushButton" name="print_pb">
     <property name="geometry">
      <rect>
-      <x>470</x>
-      <y>700</y>
+      <x>440</x>
+      <y>730</y>
       <width>161</width>
       <height>41</height>
      </rect>
@@ -398,67 +337,7 @@ QPushButton:pressed {
      <string>Print the Bill</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="add_it_pb_2">
-    <property name="geometry">
-     <rect>
-      <x>470</x>
-      <y>210</y>
-      <width>161</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Segoe UI Variable Small</family>
-      <pointsize>-1</pointsize>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {
-    background-color: qlineargradient(spread:repeat, x1:0, y1:0.602, x2:1, y2:0.603, 
-    stop:0.0631579 rgba(0, 115, 168, 216), 
-    stop:0.448864 rgba(14, 116, 163, 227), 
-    stop:0.653409 rgba(25, 116, 159, 199), 
-    stop:0.8125 rgba(35, 117, 155, 191), 
-    stop:0.982955 rgba(49, 118, 150, 185));
-    
-    color: #FFFAF0;  
-    border-radius: 20px;      
-    padding: 10px;             
-    font-size: 16px;           
-    border: 2px solid rgb(112, 172, 198);  /* Blue border */
-}
-
-QPushButton {
-    background-color: qlineargradient(spread:repeat, x1:0, y1:0.602, x2:1, y2:0.603, 
-    stop:0.0631579 rgba(0, 115, 168, 216), 
-    stop:0.448864 rgba(14, 116, 163, 227), 
-    stop:0.653409 rgba(25, 116, 159, 199), 
-    stop:0.8125 rgba(35, 117, 155, 191), 
-    stop:0.982955 rgba(49, 118, 150, 185));
-    
-    color: #FFFAF0;  
-    border-radius: 20px;      
-    padding: 10px;             
-    font-size: 16px;           
-    border: 2px solid rgb(112, 172, 198);  /* Blue border */
-}
-
-QPushButton:pressed {
-    background-color: qlineargradient(spread:repeat, x1:0, y1:0.602, x2:1, y2:0.603, 
-    stop:0.0631579 rgba(0, 100, 140, 216),
-    stop:0.448864 rgba(10, 100, 140, 227), 
-    stop:0.653409 rgba(20, 100, 140, 199), 
-    stop:0.8125 rgba(30, 100, 140, 191), 
-    stop:0.982955 rgba(40, 100, 140, 185));
-}
-</string>
-    </property>
-    <property name="text">
-     <string>Add To List</string>
-    </property>
-   </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>730</x>
@@ -522,6 +401,144 @@ QPushButton:pressed {
       </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="QLabel" name="discount_label_2">
+    <property name="geometry">
+     <rect>
+      <x>680</x>
+      <y>700</y>
+      <width>141</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI Variable Display Semil</family>
+      <pointsize>14</pointsize>
+      <underline>true</underline>
+     </font>
+    </property>
+    <property name="text">
+     <string>Discount:</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="discount_cb">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>650</y>
+      <width>191</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI Variable Small Semilig</family>
+      <pointsize>12</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Apply Discount  %</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="add_disc_lineEdit">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>660</y>
+      <width>51</width>
+      <height>21</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="show_subtotal_label">
+    <property name="geometry">
+     <rect>
+      <x>800</x>
+      <y>660</y>
+      <width>141</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI Variable Display Semil</family>
+      <pointsize>14</pointsize>
+      <underline>true</underline>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel {
+    border: 2px solid rgb(59, 136, 172);  /* Dark blue border color */
+    border-radius: 10px;  /* Rounded corners */
+    padding: 4px;  /* Space between text and border */
+}
+
+</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="show_discount_label">
+    <property name="geometry">
+     <rect>
+      <x>800</x>
+      <y>700</y>
+      <width>141</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI Variable Display Semil</family>
+      <pointsize>14</pointsize>
+      <underline>true</underline>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel {
+    border: 2px solid rgb(59, 136, 172);  /* Dark blue border color */
+    border-radius: 10px;  /* Rounded corners */
+    padding: 4px;  /* Space between text and border */
+}
+
+</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="show_gtotal_label">
+    <property name="geometry">
+     <rect>
+      <x>800</x>
+      <y>740</y>
+      <width>141</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI Variable Display Semil</family>
+      <pointsize>14</pointsize>
+      <underline>true</underline>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel {
+    border: 2px solid rgb(59, 136, 172);  /* Dark blue border color */
+    border-radius: 10px;  /* Rounded corners */
+    padding: 4px;  /* Space between text and border */
+}
+
+</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
