--- a/curr_inven.ui
+++ b/curr_inven.ui
@@ -44,6 +44,12 @@
 }
 </string>
     </property>
+    <property name="selectionMode">
+     <enum>QAbstractItemView::MultiSelection</enum>
+    </property>
+    <property name="selectionBehavior">
+     <enum>QAbstractItemView::SelectRows</enum>
+    </property>
    </widget>
    <widget class="QListView" name="qty_list">
     <property name="geometry">
@@ -67,6 +73,12 @@
     border-radius: 10px;
 }
 </string>
+    </property>
+    <property name="selectionMode">
+     <enum>QAbstractItemView::MultiSelection</enum>
+    </property>
+    <property name="selectionBehavior">
+     <enum>QAbstractItemView::SelectRows</enum>
     </property>
    </widget>
    <widget class="QListView" name="item_list">
@@ -92,6 +104,12 @@
 }
 </string>
     </property>
+    <property name="selectionMode">
+     <enum>QAbstractItemView::MultiSelection</enum>
+    </property>
+    <property name="selectionBehavior">
+     <enum>QAbstractItemView::SelectItems</enum>
+    </property>
    </widget>
    <widget class="QListView" name="m_qty_list">
     <property name="geometry">
@@ -115,6 +133,12 @@
     border-radius: 10px;
 }
 </string>
+    </property>
+    <property name="selectionMode">
+     <enum>QAbstractItemView::MultiSelection</enum>
+    </property>
+    <property name="selectionBehavior">
+     <enum>QAbstractItemView::SelectRows</enum>
     </property>
    </widget>
    <widget class="QLabel" name="price_label">
